--- a/templates/home.html
+++ b/templates/home.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--CSS Proprietario-->
-    <link rel="stylesheet" href="index.css">
+    <!--FAVICON-->
+    <link rel="shortcut icon" href="../static/img/fivetech_favicon.png" type="image/x-icon">
+    <!--CSS PROPRIETÁRIO-->
+    <link rel="stylesheet" href="../static/styles/home.css">
     <!--CSS BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Home</title>
-
 </head>
 <body>
-
-  
 
   <!--BARRA DE NAVEGAÇÃO-->
   <nav class="navbar navbar-expand-md navbar-dark my-navbar">
     <div class="container-fluid d-flex flex-wrap justify-content-between">
 
-      <a class="navbar-brand" href="">
-        <img src="./imagens/logo_fivetech_branco.png" style="width:250px;" alt="">
+      <a class="navbar-brand" href="./home.html">
+        <img src="../static/img/logo_fivetech_branco.png" style="width:170px;" alt="Logo Fiv5Tech">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
         aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,10 +30,10 @@
       <div class="collapse navbar-collapse" id="navbarsExample04">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Vagas</a>
+            <a class="nav-link active" aria-current="page" href="./vagas.html">Vagas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Cursos e Certificações</a>
@@ -51,7 +50,9 @@
   </nav>
 
   <!--CONTEÚDO DA PÁGINA-->
-  <div style="height: 300px;"></div>
+  <div class="content">
+
+  </div>
 
   <!--RODAPÉ-->
   <footer class="bd-footer py-2 my-footer">
@@ -73,22 +74,21 @@
           <ul class="list-unstyled small d-flex justify-content-between align-items-center" style="color: white;">
             <li class="mb-1">
               <a href="">
-                <img src="./imagens/instagram.png" style="width: 30px;" alt="">
+                <img src="../static/img/instagram.png" style="width: 30px;" alt="">
               </a>
             </li>
             <li class="mb-1">
               <a href="">
-                <img src="./imagens/facebook.png" style="width: 30px;" alt="">
+                <img src="../static/img/facebook.png" style="width: 30px;" alt="">
               </a>
             </li>
             <li class="mb-1">
               <a href="">
-                <img src="./imagens/linkedin.png" style="width: 30px;" alt="">
+                <img src="../static/img/linkedin.png" style="width: 30px;" alt="">
               </a>
             </li>
           </ul>
         </div>
-        
       </div>
     </div>
   </footer>
