feat: Serviço de Acesso a Fonte de Vaga

--- a/app/templates/vagas.html
+++ b/app/templates/vagas.html
@@ -68,7 +68,7 @@
               aria-expanded="false" aria-controls="collapse{{ indice }}">
               <img src="../static/img/plus-free-icon-font.png" alt="plus" height="16px" width="16px">
             </button>
-            <a href=""><img src="../static/img/share-free-icon-font.png" alt="Compartilhar" height="16px"
+            <a href="{{ url_vagas[indice] }}"><img src="../static/img/share-free-icon-font.png" alt="Compartilhar" height="16px"
                 width="16px"></a>
           </div>
         </div>
