--- a/app/static/styles/home.css
+++ b/app/static/styles/home.css
@@ -9,16 +9,51 @@ body {
 
 .content {
     flex: 1 0 auto;
-    display: flex;
-    flex-direction: row;  
-    margin: 0;
     padding: 0;
-    width: 100%;  
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.foto-mulher {
+    width: 100%;
+    height: 100%;
+}
+
+.coluna-esquerda {
+    width: 50%;
+}
+
+.coluna-direita {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    background-color: #d9d5d2;
+}
+
+.coluna-direita h2, h3 {
+    text-shadow: #707070 1px 1px 2px;
+    color: #038c3e;
+    margin: 40px;
+}
+
+.coluna-direita p {
+    margin: 40px;
+    text-align: justify;
+}
+
+.coluna-direita div ol {
+    font-weight: bolder;
+    margin: 30px;
 }
 
 .my-navbar {
     background-color: #038c3e;
 }
+
 
 .my-footer {
     background-color: #038c3e;
@@ -29,58 +64,12 @@ footer img {
     margin:15px
 }
 
-.image {
-    width: 50%;
-    
-}
-
-.image img {
-    width: 100%;
-    height: 100%;
-}
-
-#texto {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: justify;
-    background-color: #d9d5d2;
-    padding: 40px;
-}
-
-#texto h2 {
-    margin-top: 30px;
-    color: #025928;
-}
-#texto h3 {
-    margin-top: 30px;
-    color: #025928;
-}
-#texto p {
-    margin-top: 10px;
-    color: #0d0d0d;
-    font-size: large;
-}
-#texto ol {
-    margin-top: 10px;
-    color: #0d0d0d;
-    font-size: large;
-}
-
 @media only screen and (max-width: 1000px) {
-
-    .content {
+    .conteudo {
         flex-direction: column;
     }
 
-    .image {
+    .coluna-direita, .coluna-esquerda {
         width: 100%;
     }
-
-    #texto {
-        width: 100%;
-    }
-
 }
-
