--- a/app/templates/vagas.html
+++ b/app/templates/vagas.html
@@ -93,7 +93,7 @@
   </div>
 
 <!--RODAPÉ-->
-<footer class="bd-footer py-2 my-footer">
+<footer class="bd-footer py-2 fixed-bottom my-footer">
   <div class="container py-2">
     <div class="row">
       <div class="col-lg-4 d-flex justify-content-center align-items-center">
