--- a/app/templates/localizacao.html
+++ b/app/templates/localizacao.html
@@ -8,10 +8,11 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/fivetech_favicon.png') }}" type="image/x-icon">
     <!--CSS PROPRIETÁRIO-->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/localizacao.css') }}">
     <!--CSS BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Home</title>
+    <title>Localização</title>
 </head>
 <body>
 
@@ -51,38 +52,19 @@
 
   <!--CONTEÚDO DA PÁGINA-->
   <div class="content">
-    <div class="coluna-esquerda">
-      <img src="{{ url_for('static', filename='img/mulher-fundo.jpg') }}" alt="" class="foto-mulher">
+
+    <div class="selectors">
+      <p><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          São José dos Campos - SP
+        </label></p>
+      <button type="button" class="btn btn-success">Filtrar</button>
     </div>
 
-    <div class="coluna-direita">
-      <h2>SEU NOVO EMPREGO AQUI. AGORA.</h2>
-      <h3>SOBRE NÓS</h3>
-      <div>
-        <p>Buscamos tornar a relação entre empresas e candidatos mais ágil, justa e encantadora. Queremos um mundo com
-          mais gente realizada em seus trabalhos. A Fiv5Tech é uma startup fundada por profissionais de Tecnologia,
-          com o objetivo de transformar a maneira como são encontradas vagas de emprego no Brasil. Isso tem sido
-          possível
-          graças a agilidade e praticidade que trazemos para através do trabalho de nossos desenvolvedores.
-        </p>
-        <p>
-          Aliando-se a um especialista de marketing e a um desenvolvedor, igualmente apaixonados por impactar a vida de
-          pessoas, começaram a construir a plataforma líder em vagas no Brasil.
-        </p>
-        <p>
-          Aqui na Fiv5Tech nossos valores sustentam o sonho de cooperar para um mundo com mais gente realizada. Todos os
-          dias, eles movem cada um de nossos colaboradores a darem seu melhor. Estes são <span style="font-weight: bolder;">5 princípios</span> que estão
-          intrínsecos em cada ação que tomamos como empresa:
-        </p>
-        <ol>
-          <li>Juntos somos mais fortes</li>
-          <li>Somos protagonistas</li>
-          <li>Brilhamos os olhos</li>
-          <li>Sempre buscamos o sucesso</li>
-          <li>Agregamos valor</li>
-        </ol>
-      </div>
+    <div class="map">
+    
     </div>
+  
   </div>
 
   <!--RODAPÉ-->
@@ -126,10 +108,17 @@
 
 </body>
 
+<!--JS GOOGLE-->
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2F7lHp49U5yE6BZQhkBgp5auGPR8sc0k&callback=initMap"></script>
+<!--JS JQUERY-->
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <!--JS BOOTSTRAP-->
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+<!--JS PROPRIETÁRIO-->
+{{ url_for('static', filename='styles/home.css') }}
+<script src="{{ url_for('static', filename='scripts/datapoints.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/initMap.js') }}"></script>
+  
 </html>  
