--- a/app/templates/vagas.html
+++ b/app/templates/vagas.html
@@ -45,7 +45,7 @@
             <a class="nav-link active" aria-current="page" href="#">Métricas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Localização</a>
+            <a class="nav-link active" aria-current="page" href="localizacao">Localização</a>
           </li>
         </ul>
       </div>
@@ -87,13 +87,13 @@
       </div>
     </div>   
 
-    {% endfor%}
+    {% endfor %}
     
 
   </div>
 
 <!--RODAPÉ-->
-<footer class="bd-footer py-2 fixed-bottom my-footer">
+<footer class="bd-footer py-2 my-footer">
   <div class="container py-2">
     <div class="row">
       <div class="col-lg-4 d-flex justify-content-center align-items-center">
