fix: Removida a API Key do Google Maps

--- a/app/templates/localizacao.html
+++ b/app/templates/localizacao.html
@@ -109,7 +109,7 @@
 </body>
 
 <!--JS GOOGLE-->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2F7lHp49U5yE6BZQhkBgp5auGPR8sc0k&callback=initMap"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=KEYDAAPI&callback=initMap"></script>
 <!--JS JQUERY-->
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <!--JS BOOTSTRAP-->
