--- a/app/templates/localizacao.html
+++ b/app/templates/localizacao.html
@@ -53,16 +53,19 @@
   <!--CONTEÚDO DA PÁGINA-->
   <div class="content">
 
-    <div class="selectors">
-      <p><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-        <label class="form-check-label" for="flexCheckDefault">
-          São José dos Campos - SP
-        </label></p>
-      <button type="button" class="btn btn-success">Filtrar</button>
-    </div>
+    <div class="filters-and-jobs">
+      <form class="d-flex" method="post">
+        <input class="form-control me-2" type="search" placeholder="Nome da cidade / UF" aria-label="Search" id="searchbox" name="coordinates">
+        <button class="btn btn-success" type="submit" onclick="filterLocation()" id="submit-btn">Pesquisar</button>
+      </form>
 
-    <div class="map">
+      <div class="jobs">
+
+      </div>
+    </div>
     
+    <div class="map">
+      <object data="{{ url_for('static', filename='pages/map.html') }}" style="width: 100%; height: 100%;"></object>
     </div>
   
   </div>
@@ -108,16 +111,11 @@
 
 </body>
 
-<!--JS GOOGLE-->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=KEYDAAPI&callback=initMap"></script>
-<!--JS JQUERY-->
-<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <!--JS BOOTSTRAP-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <!--JS PROPRIETÁRIO-->
-<script src="{{ url_for('static', filename='scripts/datapoints.js') }}"></script>
-<script src="{{ url_for('static', filename='scripts/initMap.js') }}"></script>
-  
+<script src="{{ url_for('static', filename='scripts/filterLocations.js')}}"></script>
+
 </html>  
