--- a/app/static/styles/localizacao.css
+++ b/app/static/styles/localizacao.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 25%;
+  height: 600px;
 }
 
 .filters-and-jobs form {
@@ -21,10 +22,23 @@
 .jobs {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   margin: 0px 10px 10px 10px;
   color: white;
-  overflow-y: scroll hidden;
+  overflow-y: scroll;
+}
+
+.jobs::-webkit-scrollbar {
+  width: 10px;
+}
+
+.jobs::-webkit-scrollbar-track {
+  background: white;
+}
+
+.jobs::-webkit-scrollbar-thumb {
+  background-color: #038c3e;
+  border-radius: 20px;
 }
 
 .job {
@@ -35,4 +49,5 @@
   padding-top: 10px;
   text-align: justify;
   margin-top: 10px;
+  margin-right: 15px;
 }
