--- a/app/templates/localizacao.html
+++ b/app/templates/localizacao.html
@@ -37,7 +37,7 @@
             <a class="nav-link active" aria-current="page" href="vagas">Vagas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Cursos e Certificações</a>
+            <a class="nav-link active" aria-current="page" href="cursos">Cursos e Certificações</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Métricas</a>
@@ -56,7 +56,7 @@
     <div class="filters-and-jobs">
       <form class="d-flex" method="post">
         <input class="form-control me-2" type="search" placeholder="Nome da cidade / UF" aria-label="Search" id="searchbox" name="coordinates">
-        <button class="btn btn-success" type="submit" onclick="filterLocation()" id="submit-btn">Pesquisar</button>
+        <button class="btn btn-success" type="submit" onclick="getLocation()" id="submit-btn">Pesquisar</button>
       </form>
 
       <div class="jobs">
