--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link active" aria-current="page" href="vagas">Vagas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Cursos e Certificações</a>
+            <a class="nav-link active" aria-current="page" href="cursos">Cursos e Certificações</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Métricas</a>
@@ -52,7 +52,7 @@
   <!--CONTEÚDO DA PÁGINA-->
   <div class="content">
     <div class="coluna-esquerda">
-      <img src="{{ url_for('static', filename='img/mulher-fundo.jpg') }}" alt="" class="foto-mulher">
+      <img src="{{ url_for('static', filename='img/mulher-verde-sorrindo.jpg') }}" alt="" class="foto-mulher">
     </div>
 
     <div class="coluna-direita">
