--- a/app/templates/metricas.html
+++ b/app/templates/metricas.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="{{ url_for('static', filename='img/fivetech_favicon.png') }}" type="image/x-icon">
   <!--CSS PROPRIETÁRIO-->
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles/metricas.css') }}">
   <!--CSS BOOTSTRAP-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -52,7 +53,10 @@
   </nav>
 
   <!--CONTEÚDO DA PÁGINA-->
-hello world
+      <div class="row">
+        <img src="{{ url_for('static', filename='img/grafico.png') }}" alt="" class="col-12">
+      </div>
+ 
 
 <!--RODAPÉ-->
 <footer class="bd-footer py-2 my-footer">
@@ -91,7 +95,7 @@ hello world
       </div>
     </div>
   </div>
-</footer>
+  </footer>
 
 <!--JS BOOTSTRAP-->
 
