fix: Atualização README.md e rotas de metricas.html

--- a/app/templates/localizacao.html
+++ b/app/templates/localizacao.html
@@ -40,7 +40,7 @@
             <a class="nav-link active" aria-current="page" href="cursos">Cursos e Certificações</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Métricas</a>
+            <a class="nav-link active" aria-current="page" href="metricas">Métricas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="localizacao">Localização</a>
