--- a/app/templates/metricas.html
+++ b/app/templates/metricas.html
@@ -53,7 +53,7 @@
   </nav>
 
   <!--CONTEÚDO DA PÁGINA-->
-      <div class="row">
+      <div class="forgraphs">
         <img src="{{ url_for('static', filename='img/grafico.png') }}" alt="" class="col-12">
       </div>
  
