--- a/app/templates/vagas.html
+++ b/app/templates/vagas.html
@@ -42,7 +42,7 @@
             <a class="nav-link active" aria-current="page" href="../cursos">Cursos e Certificações</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Métricas</a>
+            <a class="nav-link active" aria-current="page" href="../metricas">Métricas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="../localizacao">Localização</a>
@@ -64,7 +64,7 @@
     </form>
     {% else %}
     <div class="courses-title">
-      <h1>Area escolhida : {{ job_details[0].area }}</h1>
+      <h1>Área escolhida : {{ job_details[0].area }}</h1>
     </div>
     {% endif %}
     <!--VAGA 01-->
