fix: Ajustando página de métricas

--- a/app/templates/cursos.html
+++ b/app/templates/cursos.html
@@ -234,7 +234,7 @@
                 </div>
                 <div class="col-lg-4 d-flex justify-content-center align-items-center">
                     <ul class="list-unstyled small" style="color: white;">
-                        <li class="mb-1">&copy; 2022, Todos os direitos reservados.</li>
+                        <li class="mb-1">&copy; 2022 - Todos os direitos reservados.</li>
                     </ul>
                 </div>
                 <div class="col-lg-4 d-flex justify-content-center align-items-center">
