--- a/app/templates/metricas.html
+++ b/app/templates/metricas.html
@@ -53,9 +53,21 @@
   </nav>
 
   <!--CONTEÚDO DA PÁGINA-->
-      <div class="forgraphs">
-        <img src="{{ url_for('static', filename='img/grafico.png') }}" alt="" class="col-12">
+  <div class="content">
+    <div id="sidebar">
+      <h3>Métricas</h3>
+      <div>
+        <select name="metrics" id="selectMetrics" >
+          <option value="sector">Vagas abertas / Setor</option>
+          <option value="heatmap">Mapa de calor da vagas / Brasil</option>
+        </select>
+        <button class="btn btn-success" type="submit" id="submit-btn" onclick="getMetrics()">Filtrar</button>
       </div>
+    </div>
+    <div id="metrics">
+      <object data="{{ url_for('static', filename='pages/heatmap.html') }}" style="width: 100%; height: 100%; display: none;" id="heatmap"></object>
+    </div>
+  </div>
  
 
 <!--RODAPÉ-->
@@ -71,7 +83,7 @@
       </div>
       <div class="col-lg-4 d-flex justify-content-center align-items-center">
         <ul class="list-unstyled small" style="color: white;">
-          <li class="mb-1">&copy; 2022, Todos os direitos reservados.</li>
+          <li class="mb-1">&copy; 2022 - Todos os direitos reservados.</li>
         </ul>
       </div>
       <div class="col-lg-4 d-flex justify-content-center align-items-center">
@@ -96,6 +108,10 @@
     </div>
   </div>
   </footer>
+
+
+<!--JS PROPRIETÁRIO-->
+<script src="{{ url_for('static', filename='scripts/metrics.js')}}"></script>
 
 <!--JS BOOTSTRAP-->
 
