fix: Exclusão de material e mudança do título das vagas

--- a/app/templates/vagas.html
+++ b/app/templates/vagas.html
@@ -73,7 +73,7 @@
       <div class="container">
         <div class="row row-cols-2">
           <div class="col">
-            <h5 class="texto">{{ job_details[indice].subject }}</h5>            
+            <h5 class="texto">Vaga de {{ job_details[indice].task }}</h5>            
           </div>
           <div class="col">
             <button class="plusbtn" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{indice}}"
