--- a/app/templates/cursos.html
+++ b/app/templates/cursos.html
@@ -8,8 +8,8 @@
     <!--FAVICON-->
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/fivetech_favicon.png') }}" type="image/x-icon">
     <!--CSS PROPRIETÁRIO-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/cursos.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">    
     <!--CSS BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -68,7 +68,7 @@
                     <h4>Python para Zumbis</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/pythonzumbie.jpeg') }}" alt="foto">
+                    <img src="{{ url_for('static', filename='img/pythonzumbie.png') }}" alt="foto">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -81,7 +81,7 @@
                     <h4>HTML e CSS para iniciantes</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/html_css.png') }}" alt="foto">
+                    <img src="{{ url_for('static', filename='img/curso-Html.png') }}" alt="foto">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -159,7 +159,7 @@
                     <h4>Cozinha Básica</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/cute_chef_girl.jpg') }}" alt="foto">
+                    <img src="{{ url_for('static', filename='img/cute_chef_girl.png') }}" alt="foto">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
