--- a/app/templates/cursos.html
+++ b/app/templates/cursos.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/fivetech_favicon.png') }}" type="image/x-icon">
     <!--CSS PROPRIETÁRIO-->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/cursos.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">    
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
     <!--CSS BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -68,7 +68,8 @@
                     <h4>Python para Zumbis</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/pythonzumbie.png') }}" alt="foto">
+                    <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/pythonzumbie.png"
+                        alt="Python_para_Zumbis">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -81,7 +82,8 @@
                     <h4>HTML e CSS para iniciantes</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/curso-Html.png') }}" alt="foto">
+                    <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/curso-Html.png"
+                        alt="HTML_e_CSS_para_iniciantes">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -94,7 +96,8 @@
                     <h4>JavaScript para iniciantes</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/curso-Js.png') }}" alt="foto">
+                    <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/curso-Js.png"
+                        alt="JavaScript_para_iniciantes">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -107,7 +110,8 @@
                     <h4>Curso de C++</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/curso-C++.png') }}" alt="foto">
+                    <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/curso-C%2B%2B.png"
+                        alt="Curso_de_C++">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -120,7 +124,8 @@
                     <h4>Java para iniciantes</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/curso-Java.png') }}" alt="foto">
+                    <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/curso-Java.png"
+                        alt="Java_para_iniciantes">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -133,7 +138,8 @@
                     <h4>Curso de SQL</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/curso-Sql.png') }}" alt="foto">
+                    <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/curso-Sql.png"
+                        alt="Curso_de_SQL">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -146,7 +152,8 @@
                     <h4>Marketing Digital</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/marketing.png') }}" alt="foto">
+                    <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/marketing.png"
+                        alt="Marketing_Digital">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -159,7 +166,8 @@
                     <h4>Cozinha Básica</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/cute_chef_girl.png') }}" alt="foto">
+                    <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/cute_chef_girl.png"
+                        alt="Cozinha_Básica">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -172,7 +180,8 @@
                     <h4>Inglês para iniciantes</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/ingles.png') }}" alt="foto">
+                    <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/ingles.png"
+                        alt="Inglês_para_iniciantes">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -185,7 +194,8 @@
                     <h4>Administração Geral</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/workflow.png') }}" alt="foto">
+                    <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/workflow.png"
+                        alt="Administração_Geral">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -198,7 +208,8 @@
                     <h4>Instalações Elétricas</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/eletronica.png') }}" alt="foto">
+                    <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/eletronica.png"
+                        alt="Instalações_Elétricas">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -211,7 +222,8 @@
                     <h4>Desenho Técnico</h4>
                 </div>
                 <div class="imagem">
-                    <img src="{{ url_for('static', filename='img/desenho_tecnico.png') }}" alt="foto">
+                    <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/desenho_tecnico.png"
+                        alt="Desenho_Técnico">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
