feat: Atualização na página de cursos

--- a/app/templates/cursos.html
+++ b/app/templates/cursos.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="imagem">
                     <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/pythonzumbie.png"
-                        alt="Python_para_Zumbis">
+                        alt="Python para Zumbis">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -83,7 +83,7 @@
                 </div>
                 <div class="imagem">
                     <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/curso-Html.png"
-                        alt="HTML_e_CSS_para_iniciantes">
+                        alt="HTML e CSS para iniciantes">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -97,7 +97,7 @@
                 </div>
                 <div class="imagem">
                     <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/curso-Js.png"
-                        alt="JavaScript_para_iniciantes">
+                        alt="JavaScript para iniciantes">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -111,7 +111,7 @@
                 </div>
                 <div class="imagem">
                     <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/curso-C%2B%2B.png"
-                        alt="Curso_de_C++">
+                        alt="Curso de C++">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -125,7 +125,7 @@
                 </div>
                 <div class="imagem">
                     <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/curso-Java.png"
-                        alt="Java_para_iniciantes">
+                        alt="Java para iniciantes">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -139,7 +139,7 @@
                 </div>
                 <div class="imagem">
                     <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/curso-Sql.png"
-                        alt="Curso_de_SQL">
+                        alt="Curso de SQL">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -153,7 +153,7 @@
                 </div>
                 <div class="imagem">
                     <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/marketing.png"
-                        alt="Marketing_Digital">
+                        alt="Marketing Digital">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -167,7 +167,7 @@
                 </div>
                 <div class="imagem">
                     <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/cute_chef_girl.png"
-                        alt="Cozinha_Básica">
+                        alt="Cozinha Básica">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -181,7 +181,7 @@
                 </div>
                 <div class="imagem">
                     <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/ingles.png"
-                        alt="Inglês_para_iniciantes">
+                        alt="Inglês para iniciantes">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -195,7 +195,7 @@
                 </div>
                 <div class="imagem">
                     <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/workflow.png"
-                        alt="Administração_Geral">
+                        alt="Administração Geral">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -209,7 +209,7 @@
                 </div>
                 <div class="imagem">
                     <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/eletronica.png"
-                        alt="Instalações_Elétricas">
+                        alt="Instalações Elétricas">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
@@ -223,7 +223,7 @@
                 </div>
                 <div class="imagem">
                     <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/desenho_tecnico.png"
-                        alt="Desenho_Técnico">
+                        alt="Desenho Técnico">
                 </div>
                 <div class="botao">
                     <input type="button" value="Saiba mais..."
