--- a/app/templates/localizacao.html
+++ b/app/templates/localizacao.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--FAVICON-->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/fivetech_favicon.png') }}" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/fivetech_favicon.png" type="image/x-icon">
     <!--CSS PROPRIETÁRIO-->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/localizacao.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/localizacao_resp.css') }}">
     <!--CSS BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -21,7 +22,7 @@
     <div class="container-fluid d-flex flex-wrap justify-content-between">
 
       <a class="navbar-brand" href="index">
-        <img src="{{ url_for('static', filename='img/logo_fivetech_branco.png') }}" style="width:170px;" alt="Logo Fiv5Tech">
+        <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/logo_fivetech_branco.png" style="width:170px;" alt="Logo Fiv5Tech">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
         aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,6 +46,18 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="localizacao">Localização</a>
           </li>
+          {% if current_user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../cadastro">Cadastrar Vaga</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../logout">Logout</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../login">Login</a>
+          </li>
+          {% endif %}
         </ul>
       </div>
     </div>
@@ -92,17 +105,17 @@
           <ul class="list-unstyled small d-flex justify-content-between align-items-center" style="color: white;">
             <li class="mb-1">
               <a href="">
-                <img src="{{ url_for('static', filename='img/instagram.png') }}" style="width: 30px;" alt="">
+                <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/instagram.png" style="width: 30px;" alt="">
               </a>
             </li>
             <li class="mb-1">
               <a href="">
-                <img src="{{ url_for('static', filename='img/facebook.png') }}" style="width: 30px;" alt="">
+                <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/facebook.png" style="width: 30px;" alt="">
               </a>
             </li>
             <li class="mb-1">
               <a href="">
-                <img src="{{ url_for('static', filename='img/linkedin.png') }}" style="width: 30px;" alt="">
+                <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/linkedin.png" style="width: 30px;" alt="">
               </a>
             </li>
           </ul>
@@ -118,6 +131,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <!--JS PROPRIETÁRIO-->
-<script src="{{ url_for('static', filename='scripts/filterLocations.js')}}"></script>
+<script src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/scripts/filterLocations.js"></script>
 
 </html>  
