--- a/app/templates/metricas.html
+++ b/app/templates/metricas.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--FAVICON-->
-  <link rel="shortcut icon" href="{{ url_for('static', filename='img/fivetech_favicon.png') }}" type="image/x-icon">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/fivetech_favicon.png" type="image/x-icon">
   <!--CSS PROPRIETÁRIO-->
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/metricas.css') }}">
@@ -23,7 +23,7 @@
     <div class="container-fluid d-flex flex-wrap justify-content-between">
 
       <a class="navbar-brand" href="index">
-        <img src="{{ url_for('static', filename='img/logo_fivetech_branco.png') }}" style="width:170px;" alt="Logo Fiv5Tech">
+        <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/logo_fivetech_branco.png" style="width:170px;" alt="Logo Fiv5Tech">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
         aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,17 +78,17 @@
         <ul class="list-unstyled small d-flex justify-content-between align-items-center" style="color: white;">
           <li class="mb-1">
             <a href="">
-              <img src="{{ url_for('static', filename='img/instagram.png') }}" style="width: 30px;" alt="">
+              <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/instagram.png" style="width: 30px;" alt="">
             </a>
           </li>
           <li class="mb-1">
             <a href="">
-              <img src="{{ url_for('static', filename='img/facebook.png') }}" style="width: 30px;" alt="">
+              <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/facebook.png" style="width: 30px;" alt="">
             </a>
           </li>
           <li class="mb-1">
             <a href="">
-              <img src="{{ url_for('static', filename='img/linkedin.png') }}" style="width: 30px;" alt="">
+              <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/linkedin.png" style="width: 30px;" alt="">
             </a>
           </li>
         </ul>
