--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--FAVICON-->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/fivetech_favicon.png') }}" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/fivetech_favicon.png" type="image/x-icon">
     <!--CSS PROPRIETÁRIO-->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
     <!--CSS BOOTSTRAP-->
@@ -105,17 +105,17 @@
           <ul class="list-unstyled small d-flex justify-content-between align-items-center" style="color: white;">
             <li class="mb-1">
               <a href="">
-                <img src="{{ url_for('static', filename='img/instagram.png') }}" style="width: 30px;" alt="">
+                <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/instagram.png" style="width: 30px;" alt="">
               </a>
             </li>
             <li class="mb-1">
               <a href="">
-                <img src="{{ url_for('static', filename='img/facebook.png') }}" style="width: 30px;" alt="">
+                <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/facebook.png" style="width: 30px;" alt="">
               </a>
             </li>
             <li class="mb-1">
               <a href="">
-                <img src="{{ url_for('static', filename='img/linkedin.png') }}" style="width: 30px;" alt="">
+                <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/linkedin.png" style="width: 30px;" alt="">
               </a>
             </li>
           </ul>
