--- a/app/static/styles/home.css
+++ b/app/static/styles/home.css
@@ -1,27 +1,10 @@
-html,
-body {
+html, body {
     height: 100%;
 }
 
 body {
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
-    scroll-behavior: smooth;
-}
-
-body::-webkit-scrollbar {
-    width: 15px;
-}
-
-body::-webkit-scrollbar-track {
-    background: white;
-}
-
-body::-webkit-scrollbar-thumb {
-    background-color: #038c3e;
-    border-radius: 0px;
-   
 }
 
 .content {
@@ -36,7 +19,6 @@ body::-webkit-scrollbar-thumb {
 
 .foto-mulher {
     width: 100%;
-    height: 100%;
 }
 
 .coluna-esquerda {
@@ -44,6 +26,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .coluna-direita {
+    font-size: .9vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -51,8 +34,7 @@ body::-webkit-scrollbar-thumb {
     background-color: #d9d5d2;
 }
 
-.coluna-direita h2,
-h3 {
+.coluna-direita h2, h3 {
     text-shadow: #707070 1px 1px 2px;
     color: #038c3e;
     margin: 40px;
@@ -79,16 +61,7 @@ h3 {
 }
 
 footer img {
-    margin: 15px
+    margin:15px
 }
 
-@media only screen and (max-width: 1000px) {
-    .conteudo {
-        flex-direction: column;
-    }
 
-    .coluna-direita,
-    .coluna-esquerda {
-        width: 100%;
-    }
-}
