--- a/app/static/styles/metricas.css
+++ b/app/static/styles/metricas.css
@@ -3,5 +3,64 @@ body{
 }
 
 .forgraphs {
-    margin: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 30px;
+}
+
+.forgraphs img {
+    border-radius: 5px;
+}
+
+body{
+    background-color: #d9d5d2;
+}
+
+.content {
+    display: flex;
+}
+
+#sidebar {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #025928;
+    width: 25%;
+}
+
+#sidebar h3 {
+    margin: 30px;
+    color: white;
+    font-weight: 400;
+}
+
+#sidebar div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #d9d5d2;
+    border-radius: 10px;
+    width: 70%;
+    height: 80px;
+}
+
+#metrics {
+    width: 75%;
+    height: 100%;
+    background-color: #d9d5d2;
+}
+
+.folium-map {
+    width: 100%;
+    height: 100%;
+}
+
+.myselect {
+    width: 80%;
+    border-radius: 10px;
+    padding: 5px;
+    text-align: center;
 }
