--- a/app/templates/cursos.html
+++ b/app/templates/cursos.html
@@ -13,7 +13,6 @@
     <!--CSS BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="cursos.css">
     <title>Cursos e Certificações</title>
 
 </head>
@@ -22,36 +21,48 @@
     <!--BARRA DE NAVEGAÇÃO-->
     <nav class="navbar navbar-expand-md navbar-dark my-navbar">
         <div class="container-fluid d-flex flex-wrap justify-content-between">
-
-            <a class="navbar-brand" href="index">
-                <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/logo_fivetech_branco.png" style="width:170px;" alt="Logo Fiv5Tech">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
-                aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarsExample04">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="vagas">Vagas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="cursos">Cursos e Certificações</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="metricas">Métricas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="localizacao">Localização</a>
-                    </li>
-                </ul>
-            </div>
+    
+          <a class="navbar-brand" href="index">
+            <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/logo_fivetech_branco.png" style="width:170px;" alt="Logo Fiv5Tech">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
+            aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+    
+          <div class="collapse navbar-collapse" id="navbarsExample04">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="vagas">Vagas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="cursos">Cursos e Certificações</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="metricas">Métricas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="localizacao">Localização</a>
+              </li>
+              {% if current_user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../cadastro">Cadastrar Vaga</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../logout">Logout</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../login">Login</a>
+              </li>
+              {% endif %}
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>               
 
     <!--CONTEÚDO DA PÁGINA-->
     <div class="conteudo">
