--- a/app/templates/localizacao.html
+++ b/app/templates/localizacao.html
@@ -131,6 +131,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <!--JS PROPRIETÁRIO-->
-<script src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/scripts/filterLocations.js"></script>
+<script src="{{ url_for('static', filename='scripts/filterLocations.js')}}"></script>
 
 </html>  
