--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--FAVICON-->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/fivetech_favicon.png') }}" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/fivetech_favicon.png" type="image/x-icon">
     <!--CSS PROPRIETÁRIO-->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/index_resp.css') }}">
     <!--CSS BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -20,7 +21,7 @@
     <div class="container-fluid d-flex flex-wrap justify-content-between">
 
       <a class="navbar-brand" href="index">
-        <img src="{{ url_for('static', filename='img/logo_fivetech_branco.png') }}" style="width:170px;" alt="Logo Fiv5Tech">
+        <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/logo_fivetech_branco.png" style="width:170px;" alt="Logo Fiv5Tech">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
         aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,19 +31,19 @@
       <div class="collapse navbar-collapse" id="navbarsExample04">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index">Home</a>
+            <a class="nav-link active" aria-current="page" href="../index">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="vagas">Vagas</a>
+            <a class="nav-link active" aria-current="page" href="../vagas">Vagas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="cursos">Cursos e Certificações</a>
+            <a class="nav-link active" aria-current="page" href="../cursos">Cursos e Certificações</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="metricas">Métricas</a>
+            <a class="nav-link active" aria-current="page" href="../metricas">Métricas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="localizacao">Localização</a>
+            <a class="nav-link active" aria-current="page" href="../localizacao">Localização</a>
           </li>
         </ul>
       </div>
@@ -98,24 +99,24 @@
         </div>
         <div class="col-lg-4 d-flex justify-content-center align-items-center">
           <ul class="list-unstyled small" style="color: white;">
-            <li class="mb-1">&copy; 2022 - Todos os direitos reservados.</li>
+            <li class="mb-1">&copy; 2022, Todos os direitos reservados.</li>
           </ul>
         </div>
         <div class="col-lg-4 d-flex justify-content-center align-items-center">
           <ul class="list-unstyled small d-flex justify-content-between align-items-center" style="color: white;">
             <li class="mb-1">
               <a href="">
-                <img src="{{ url_for('static', filename='img/instagram.png') }}" style="width: 30px;" alt="">
+                <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/instagram.png" style="width: 30px;" alt="">
               </a>
             </li>
             <li class="mb-1">
               <a href="">
-                <img src="{{ url_for('static', filename='img/facebook.png') }}" style="width: 30px;" alt="">
+                <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/facebook.png" style="width: 30px;" alt="">
               </a>
             </li>
             <li class="mb-1">
               <a href="">
-                <img src="{{ url_for('static', filename='img/linkedin.png') }}" style="width: 30px;" alt="">
+                <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/linkedin.png" style="width: 30px;" alt="">
               </a>
             </li>
           </ul>
