--- a/app/templates/vagas.html
+++ b/app/templates/vagas.html
@@ -6,24 +6,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--FAVICON-->
-  <link rel="shortcut icon" href="{{ url_for('static', filename='img/fivetech_favicon.png') }}" type="image/x-icon">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/fivetech_favicon.png" type="image/x-icon">
   <!--CSS PROPRIETÁRIO-->
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/vaga.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles/vagas_resp.css') }}">
   <!--CSS BOOTSTRAP-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>Vagas</title>
 </head>
 
-<body>
+<body id="back">
 
   <!--BARRA DE NAVEGAÇÃO-->
   <nav class="navbar navbar-expand-md navbar-dark my-navbar">
     <div class="container-fluid d-flex flex-wrap justify-content-between">
 
       <a class="navbar-brand" href="index">
-        <img src="{{ url_for('static', filename='img/logo_fivetech_branco.png') }}" style="width:170px;" alt="Logo Fiv5Tech">
+        <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/logo_fivetech_branco.png" style="width:170px;"
+          alt="Logo Fiv5Tech">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
         aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,20 +35,35 @@
       <div class="collapse navbar-collapse" id="navbarsExample04">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index">Home</a>
+            <a class="nav-link active" aria-current="page" href="../../index">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../vagas">Vagas</a>
+            <a class="nav-link active" aria-current="page" href="../../vagas">Vagas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../cursos">Cursos e Certificações</a>
+            <a class="nav-link active" aria-current="page" href="../../cursos">Cursos e Certificações</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../metricas">Métricas</a>
+            <a class="nav-link active" aria-current="page" href="../../metricas">Métricas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../localizacao">Localização</a>
+            <a class="nav-link active" aria-current="page" href="../../localizacao">Localização</a>
           </li>
+          {% if current_user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../../cadastro">Cadastrar Vaga</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../../refresh">Atualizar Vagas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../../logout">Logout</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../../login">Login</a>
+          </li>
+          {% endif %}
         </ul>
       </div>
     </div>
@@ -55,95 +72,171 @@
   <!--CONTEÚDO DA PÁGINA-->
   <div class="content_vagas">
     {% if not have_filter %}
-    <form action="" method="POST">
+    <form action="" method="POST" >
       {{ form_filter.csrf_token }}
       <div class="byfilter">
         {{ form_filter.my_filter(class="myselect") }}
-        <button type="submit" id="filter_btn">Filtrar</button>
+        <button type="submit" class="filter_btn">Filtrar</button>
       </div>
     </form>
     {% else %}
     <div class="courses-title">
-      <h1>Área escolhida : {{ job_details[0].area }}</h1>
+      <h1>Area escolhida : {{ have_filter }}</h1>
+      <form action="" method="POST">
+        {{ form_filter.csrf_token }}
+        <button type="submit" class="filter_btn">Voltar</button>
+      </form>
     </div>
     {% endif %}
-    <!--VAGA 01-->
-    {% for indice in range(0, job_details_len) %}
+    <!--VAGAS-->
+    {% for job_details in job_details.items %}
     <div class="vaga">
-      <div class="container">
-        <div class="row row-cols-2">
-          <div class="col">
-            <h5 class="texto">Vaga de {{ job_details[indice].task }}</h5>            
+      <div class="container-fluid">
+        <div class="row row-cols-2 align-items-center justify-content-center">
+          <div class="col" id="job-title">
+            <h5 class="text-start">Vaga de {{ job_details.task }}</h5>
           </div>
-          <div class="col">
-            <button class="plusbtn" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{indice}}"
-              aria-expanded="false" aria-controls="collapse{{indice}}">
-              <img src="../static/img/plus-free-icon-font.png" alt="plus" height="16px" width="16px">
+          <div class="col" id="job-links">
+            <button class="plusbtn" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ job_details.id }}"
+              aria-expanded="false" aria-controls="collapse{{ job_details.id }}">
+              <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/plus-free-icon-font.png" alt="plus" height="20px" width="20px">
             </button>
-            <a href="{{ job_details[indice].url }}"><img src="../static/img/share.png" alt="Compartilhar" height="16px"
-                width="16px"></a>
+            {% if  not job_details.url == "Cadastrada manualmente" %}
+            <button class="redirect-btn">
+              <a href="{{ job_details.url }}" ><img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/share.png" alt="Compartilhar" height="20px" width="20px"></a>
+            </button>
+            {% endif %}
+            {% if current_user.is_authenticated %}
+            <form action="" method="POST" name="vagaId">
+              <input type="text" value="{{ job_details.id }}" name="vagaId" style="display: none;">
+              <button type="submit" class="btn-close btn-close-white" aria-label="Close" id="{{ job_details.id }}"></button>
+            </form>
+            {% endif %}
           </div>
         </div>
       </div>
-      <div class="collapse" id="collapse{{indice}}">
-        <div class="description">
-          <p class="texto">- Local: {{ job_details[indice].place  }}</p>
-          <p class="texto">- Cargo/Função: {{ job_details[indice].task  }}</p>
-          <p class="texto">- Salário: {{ job_details[indice].wage  }}</p>
-          <p class="texto">- Empresa: {{ job_details[indice].company  }}</p>          
-          <p class="texto">- Descrição Geral:</p>
-          <p class="texto">{{ job_details[indice].description  }}</p>
-          <p class="texto">- Requistos:</p>
-          <p class="texto">{{ job_details[indice].assignment  }}</p>
+      <div class="collapse" id="collapse{{ job_details.id }}">
+        <div class="description" id="job-description">
+          <p class="texto"><span class="bold-titles">Local:</span> {{ job_details.place }}</p>
+          <p class="texto"><span class="bold-titles">Cargo/Função:</span> {{ job_details.task }}</p>
+          <p class="texto"><span class="bold-titles">Salário:</span> {{ job_details.wage }}</p>
+          <p class="texto"><span class="bold-titles">Empresa:</span> {{ job_details.company }}</p>
+          <p class="texto"><span class="bold-titles">Descrição Geral:</span></p>
+          <p class="texto">{{ job_details.description }}</p>
+          <p class="texto"><span class="bold-titles">Requistos:</span></p>
+          <p class="texto">{{ job_details.assignment }}</p>
         </div>
-      </div>
-    </div>  
-    
-  {% endfor %}
-
-<!--RODAPÉ-->
-<footer class="bd-footer py-2 my-footer">
-  <div class="container py-2">
-    <div class="row">
-      <div class="col-lg-4 d-flex justify-content-center align-items-center">
-        <ul class="list-unstyled small " style="color: white;">
-          <li class="mb-1">Contato:</li>
-          <li class="mb-1">Tel.: (12) 3456-7890</li>
-          <li class="mb-1">atendimento@empresa.com.br</li>
-        </ul>
-      </div>
-      <div class="col-lg-4 d-flex justify-content-center align-items-center">
-        <ul class="list-unstyled small" style="color: white;">
-          <li class="mb-1">&copy; 2022, Todos os direitos reservados.</li>
-        </ul>
-      </div>
-      <div class="col-lg-4 d-flex justify-content-center align-items-center">
-        <ul class="list-unstyled small d-flex justify-content-between align-items-center" style="color: white;">
-          <li class="mb-1">
-            <a href="">
-              <img src="{{ url_for('static', filename='img/instagram.png') }}" style="width: 30px;" alt="">
-            </a>
-          </li>
-          <li class="mb-1">
-            <a href="">
-              <img src="{{ url_for('static', filename='img/facebook.png') }}" style="width: 30px;" alt="">
-            </a>
-          </li>
-          <li class="mb-1">
-            <a href="">
-              <img src="{{ url_for('static', filename='img/linkedin.png') }}" style="width: 30px;" alt="">
-            </a>
-          </li>
-        </ul>
       </div>
     </div>
-  </div>
-</footer>
+    {% endfor %}
 
-<!--JS BOOTSTRAP-->
+    <!-- Pagination Links-->
+    {% if not have_filter %}
+    <div class="paginate">
+      <a href="{{ url_for('vagas', page=job_details.prev_num) }}" class="btn btn-outline-success 
+         {% if job_details.page == 1 %}disabled{% endif %}">
+        &laquo;
+      </a>
+      <!-- Loop through the number of pages to display a link for each-->
+      {% for page_num in job_details.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+      {% if page_num %}
+      <!-- Check for the active page and set the link to "Active"-->
+      {% if job_details.page == page_num %}
+      <a href="{{ url_for('vagas', page=page_num) }}" class="btn btn-outline-success">
+        {{ page_num }}
+      </a>
+      {% else %}
+      <a href="{{ url_for('vagas', page=page_num) }}" class="btn btn-outline-success">
+        {{ page_num }}
+      </a>
+      {% endif %}
+      {% else %}
+      ...
+      {% endif %}
+      {% endfor %}
+      <a href="{{ url_for('vagas', page=job_details.next_num) }}" class="btn btn-outline-success 
+         {% if job_details.page == job_details.pages %}disabled{% endif %}">
+        &raquo;
+      </a>
+    </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    {% else %}
+    <div class="paginate">
+      <a href="{{ url_for('area_filter_page', page=job_details.prev_num, choice_filter=have_filter) }}" class="btn btn-outline-success 
+         {% if job_details.page == 1 %}disabled{% endif %}">
+        &laquo;
+      </a>
+      <!-- Loop through the number of pages to display a link for each-->
+      {% for page_num in job_details.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+      {% if page_num %}
+      <!-- Check for the active page and set the link to "Active"-->
+      {% if job_details.page == page_num %}
+      <a href="{{ url_for('area_filter_page', page=page_num, choice_filter=have_filter) }}" class="btn btn-outline-success">
+        {{ page_num }}
+      </a>
+      {% else %}
+      <a href="{{ url_for('area_filter_page', page=page_num, choice_filter=have_filter) }}" class="btn btn-outline-success">
+        {{ page_num }}
+      </a>
+      {% endif %}
+      {% else %}
+      ...
+      {% endif %}
+      {% endfor %}
+      <a href="{{ url_for('area_filter_page', page=job_details.next_num, choice_filter=have_filter) }}" class="btn btn-outline-success 
+         {% if job_details.page == job_details.pages %}disabled{% endif %}">
+        &raquo;
+      </a>
+    </div>
+
+    {% endif %}
+
+
+    <!--RODAPÉ-->
+    <footer class="bd-footer py-2 my-footer">
+      <div class="container py-2">
+        <div class="row">
+          <div class="col-lg-4 d-flex justify-content-center align-items-center">
+            <ul class="list-unstyled small " style="color: white;">
+              <li class="mb-1">Contato:</li>
+              <li class="mb-1">Tel.: (12) 3456-7890</li>
+              <li class="mb-1">atendimento@empresa.com.br</li>
+            </ul>
+          </div>
+          <div class="col-lg-4 d-flex justify-content-center align-items-center">
+            <ul class="list-unstyled small" style="color: white;">
+              <li class="mb-1">&copy; 2022, Todos os direitos reservados.</li>
+            </ul>
+          </div>
+          <div class="col-lg-4 d-flex justify-content-center align-items-center">
+            <ul class="list-unstyled small d-flex justify-content-between align-items-center" style="color: white;">
+              <li class="mb-1">
+                <a href="">
+                  <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/instagram.png" style="width: 30px;" alt="">
+                </a>
+              </li>
+              <li class="mb-1">
+                <a href="">
+                  <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/facebook.png" style="width: 30px;" alt="">
+                </a>
+              </li>
+              <li class="mb-1">
+                <a href="">
+                  <img src="https://raw.githubusercontent.com/Fiv5TechCo/API-1ADS-2022-1/main/app/static/img/linkedin.png" style="width: 30px;" alt="">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!--JS BOOTSTRAP-->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"></script>
 
 </html>
